package com.zastra.zastra.infra.enums;

public enum AnnouncementVisibility {

    OFFICERS,
    ALL

}
